--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,13 +1,29 @@
 /* Add a background color to the header element */
-
+header {
+    background-color: beige;
+    text-align: center;
+}
 /* Add a fun background color to the main element */
-
+main{
+    background-color: #B0C4DE ;
+}
 /* Align the h1 containing your name in the center of the header*/
-
+h1{
+    text-align: center;
+}
 /* Make your p tag a different color and italic */
-
+p{
+    color: blue
+    <i>;
+}
 /* Put a border around your image */
 
 /* Change the font-family of your list */
-
+ul{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 /* Add a background color to the footer element */
+footer{
+    background-color: aqua;
+}
