--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,7 +1,6 @@
 /* Add a background color to the header element */
 header {
     background-color: beige;
-    text-align: center;
 }
 /* Add a fun background color to the main element */
 main{
@@ -13,15 +12,21 @@ h1{
 }
 /* Make your p tag a different color and italic */
 p{
-    color: blue
-    <i>;
+    color: blue;
+    font-style: italic;
 }
 /* Put a border around your image */
-
+img{
+    border: 2px solid #000;
+    padding: 3px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 /* Change the font-family of your list */
 ul{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 /* Add a background color to the footer element */
 footer{
